--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -11,6 +11,7 @@
     "mongoose": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
