--- a/app/backend/.env.example
+++ b/app/backend/.env.example
@@ -1,5 +1,6 @@
-DB_USER=hugosbarros
-DB_PASS=pass
-DEBUG=False
-FRONTEND_URL="http://localhost:3000"
-PORT=5000
+HOST=0.0.0.0
+PORT=1337
+APP_KEYS="toBeModified1,toBeModified2"
+API_TOKEN_SALT=tobemodified
+ADMIN_JWT_SECRET=tobemodified
+JWT_SECRET=tobemodified
