--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "file-saver": "^2.0.5",
     "mongoose": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
